login funcionando, falta trocar rotas para pretty e melhorar a tela, nao esquecer de trocar o persistence para none

--- a/src/main/webapp/view/login.xhtml
+++ b/src/main/webapp/view/login.xhtml
@@ -25,10 +25,16 @@
             </h:panelGrid>
 
             <p:commandButton id="btEntrar" value="Entrar" ajax="false"
-                             action="#{loginBean.redireciona()}"
+                             action="#{loginBean.onClickLogar()}"
+                             icon="ui-icon-check" />
+
+
+        </h:form>
+        <h:form>
+            <p:commandButton id="btSair" value="Logout" ajax="false"
+                             action="#{loginBean.logoutB()}"
                              icon="ui-icon-check" />
         </h:form>
-
     </ui:define>
 
 </ui:composition>
