--- a/src/main/webapp/resources/css/application.css
+++ b/src/main/webapp/resources/css/application.css
@@ -53,6 +53,10 @@ h6 {
   width: 100px;
 }
 
+div.nav-wrapper ul li a {
+  color: black;
+}
+
 /**********************************************
 ************ Header styles (index path) *******
 ***********************************************/
