--- a/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -8,9 +8,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:jsf="http://xmlns.jcp.org/jsf"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:pretty="http://ocpsoft.com/prettyfaces"
-          
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+>
 
 <h:head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -32,31 +30,11 @@
     <header>
         <nav class="blue lighten-4">
             <div class="nav-wrapper">
-                <pretty:link mappingId="home">
-                    <f:view><img id="logo" src="#{resource['images/logo.png']}" class="responsive-img" /></f:view>
-                </pretty:link>
-                
-                <h:panelGroup rendered="#{not empty sessionUserBean.currentUser}">
-                    <ul class="right">
-                        <li>
-                            <pretty:link mappingId="occurrences">
-                                <f:view>Ocorrências</f:view>
-                            </pretty:link>
-                        </li>
-
-                        <li>
-                            <pretty:link mappingId="occurrence-record">
-                                <f:view>Nova Ocorrência</f:view>
-                            </pretty:link>
-                        </li>
-
-                        <li>
-                            <h:form>
-                                <h:commandLink action="#{loginBean.logoutB()}" value="Logout"></h:commandLink>
-                            </h:form>
-                        </li>
-                    </ul>
-                </h:panelGroup> 
+                <a href="#">
+                    <img id="logo" src="#{resource['images/logo.png']}" class="responsive-img" />
+                </a>
+                <ul class="right">
+                </ul>
             </div>
         </nav>
     </header>
