urls arrumadas, metodo para contagem de view criado, porem erro misterioso ocorrendo

--- a/src/main/webapp/view/ocorrencias/detalhes.xhtml
+++ b/src/main/webapp/view/ocorrencias/detalhes.xhtml
@@ -31,6 +31,8 @@
                             <p>Bairro: #{occurrenceBean.occurrence.neighborhood.name}</p>
                             <p>Endereço: #{occurrenceBean.occurrence.address}</p>
                             <p>Categoria: #{occurrenceBean.occurrence.category.name}</p>
+                            <p><i class="fa fa-eye" aria-hidden="true"/>
+                                Total de visualizações: #{occurrenceBean.occurrence.views} </p>
                         </div>
                     </div>
                 </div>
