--- a/src/main/webapp/view/ocorrencias/inicio.xhtml
+++ b/src/main/webapp/view/ocorrencias/inicio.xhtml
@@ -79,14 +79,16 @@
                                 </div>
                                 <div class="card-content">
                                     <span class="card-title activator grey-text text-darken-4">#{occurrence.problem.name}<i class="material-icons right">more_vert</i></span>
-                                    <p><a href="/ocorrencias/#{occurrence.id}/detalhes">Detalhes</a></p>
+                                    <p><a href="/reclama-guarapuava/ocorrencias/#{occurrence.id}">Detalhes</a></p>
                                 </div>
                                 <div class="card-reveal">
                                     <span class="card-title grey-text text-darken-4">#{occurrence.problem.name}<i class="material-icons right">close</i></span>
                                     <p>Endereço: #{occurrence.address} - #{occurrence.neighborhood.name}</p>
                                     <p>Reclamação: #{occurrence.category.name} - #{occurrence.problem.name}</p>
                                     <p>Descrição: #{occurrence.description}</p>
-                                    <p><a href="/ocorrencias/#{occurrence.id}/detalhes">Detalhes</a></p>
+                                    <p><a href="/reclama-guarapuava/ocorrencias/#{occurrence.id}">Detalhes</a></p>
+                                    <p><i class="fa fa-eye" aria-hidden="true"/>
+                                        Total de visualizações: #{occurrenceBean.occurrence.views} </p>
                                 </div>
                             </div>
                         </div>
