--- a/src/main/webapp/view/ocorrencias/minhas-ocorrencias.xhtml
+++ b/src/main/webapp/view/ocorrencias/minhas-ocorrencias.xhtml
@@ -14,7 +14,7 @@
 
         <article id="index-content" class="container">
             <header class="center-align">
-                <h3>Suas Ocorrencias</h3>
+                <h3>Suas Ocorrencias!</h3>
             </header>
             <div class="row">
                 <div class="event-card grey lighten-1 col s12">
