adicionado pretty route para lista de ocorrencias e graficos, incluido links, criado MB PieChart

--- a/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -39,6 +39,18 @@
                     <h:panelGroup rendered="#{not empty sessionUserBean.currentUser}">
                         <ul class="right">
                             <li>
+                                <pretty:link mappingId="admin-occurrences-charts">
+                                    <f:view>Gráficos</f:view>
+                                </pretty:link>
+                            </li>
+                            <li>
+                                <pretty:link mappingId="admin-list-occurrences">
+                                    <f:view>Relatórios</f:view>
+                                </pretty:link>
+                            </li>
+
+
+                            <li>
                                 <pretty:link mappingId="my-occurrences">
                                     <f:view>Minhas Ocorrências</f:view>
                                 </pretty:link>
