--- a/src/main/webapp/view/admin/graficos.xhtml
+++ b/src/main/webapp/view/admin/graficos.xhtml
@@ -13,20 +13,26 @@
         <p:messages/>
 
         <div class="container">
-            <artigle>
-                <header class="center-align">
-                    <h3>Gráficos</h3>
-                </header>
 
-                <div class="divider"></div>
+            <header class="center-align">
+                <h3>Gráficos</h3>
+            </header>
 
-                <p:chart  id="chart" type="pie" model="#{chartBean.pieModel1}" style="width:400px;height:300px;"  />
+            <div class="divider"></div>
+            <p:outputPanel id="graficos" style="text-align: center">
+                <p:panelGrid id="panelCharts" columns="2" layout="grid">
+                    <p:chart id="chart" type="pie" model="#{chartBean.pieModel1}" style="height:350px;"/>
+
+                    <p:chart id="barChart" type="bar" model="#{chartBean.barModel1}" style="height: 350px;" />
+
+                    <p:chart id="barChart2" type="bar" model="#{chartBean.barModel2}" style="height: 350px;" />
+
+                    <p:chart id="barChart3" type="bar" model="#{chartBean.barModel3}" style="height: 350px;" />
+
+                </p:panelGrid>
+            </p:outputPanel>
 
 
-                <div class="divider"></div>
-                <p:chart id="barChart" type="bar" model="#{chartBean.barModel1}" style="width: 400px; height: 350px;" />
-
-            </artigle>
         </div>
     </ui:define>
 </ui:composition>
