--- a/src/main/webapp/resources/css/application.css
+++ b/src/main/webapp/resources/css/application.css
@@ -94,14 +94,16 @@ div.nav-wrapper ul li a {
 #box-action .btn {
     margin: 0 auto;
     display: block;
-    width: 250px;
+    width: 350px;
     padding: 0;
-    font-size: small;
+    font-size: large;
 }
 #box-action .btn i {
     float: left;
     margin-left: 10px;
 }
+
+
 
 /**********************************************
 ******** Index content styles (index path)*****
