--- a/src/main/webapp/view/ocorrencias/minhas-ocorrencias.xhtml
+++ b/src/main/webapp/view/ocorrencias/minhas-ocorrencias.xhtml
@@ -14,19 +14,24 @@
 
         <article id="index-content" class="container">
             <header class="center-align">
-                <h3>Suas Ocorrencias!</h3>
+                <h3>Minhas Ocorrências</h3>
             </header>
             <div class="row">
                 <div class="event-card grey lighten-1 col s12">
                     <div class="container card-body">
                         <div class="row">
-                            <div class="col s2 card-icon">
-                                <i class="fa fa-th-large" aria-hidden="true" />
+                            <div class="col s1 card-icon">
+                                <div class="center-align">
+                                    <i class="fa fa-th-large" aria-hidden="true" />
+                                </div>
                             </div>
-                            <div class="col s8 card-text center-align">
-                                <p>TODAS OCORRÊNCIAS</p>
+                            <div class="col s5 card-text left-align">
+                                <h5>Modo de Visualização</h5>
                             </div>
-                            <div class="col s2 card-action">
+                            <div class="col s5 card-text right-align">
+                                <h5>Total de Ocorrências</h5>
+                            </div>
+                            <div class="col s1 card-action">
                                 <div class="box center-align">
                                     <span>#{occurrenceBean.occurrenceService.getByUser( sessionUserBean.currentUser.id ).size()}</span>
                                 </div>
